deploy/paas/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jet-surrogate
spec:
  selector: {component: web}
  ports: [{port: 8080, targetPort: 8080}]
