deploy/paas/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: jet-surrogate
  annotations:
    haproxy.router.openshift.io/timeout: 600s     # large uploads
spec:
  host: prism.web.cern.ch                # the site name registered at webservices.web.cern.ch
  to: {kind: Service, name: jet-surrogate}
  port: {targetPort: 8080}
  tls: {termination: edge, insecureEdgeTerminationPolicy: Redirect}
